force-app/main/default/objects/Members__c/fields/Active_borrow_count__c.field-meta.xml
<CustomField>
    <fullName>Active_borrow_count__c</fullName>
    <description>Books borrowed count</description>
    <label>Active borrow count</label>
    <summaryForeignKey>Borrow_History__c.Member_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>