force-app/main/default/objects/Members__c/fields/EmailID__c.field-meta.xml
<CustomField>
    <fullName>EmailID__c</fullName>
    <description>Email ID</description>
    <label>EmailID</label>
    <type>Email</type>
</CustomField>