force-app/main/default/objects/Members__c/fields/Max_books_allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_books_allowed__c</fullName>
    <description>Max books allowed</description>
    <label>Max books allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>