force-app/main/default/objects/Members__c/fields/MembershipID__c.field-meta.xml
<CustomField>
    <fullName>MembershipID__c</fullName>
    <description>Membership ID</description>
    <displayFormat>MID-{0000}</displayFormat>
    <label>MembershipID</label>
    <type>AutoNumber</type>
</CustomField>