force-app/main/default/objects/Members__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MembershipID__c</columns>
    <columns>Max_books_allowed__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>EmailID__c</columns>
    <columns>Active_borrow_count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>